2007-11-08  Tom Tromey  <tromey@redhat.com>

	* c-parser.c (c_parse_init): Call create_hunk_binding_map here...
	(c_parse_file): ... not here.

2007-11-08  Tom Tromey  <tromey@redhat.com>

	* c-parser.c (c_parser_is_string_literal): New function.
	(c_parser_lex_string): Likewise.
	(c_hack_token): Add raw_string argument.  Use
	c_parser_lex_string.
	(c_parser_peek_token): Update.
	(c_parser_peek_2nd_token): Update.

2007-11-08  Tom Tromey  <tromey@redhat.com>

	* toplev.c (finalize): Check 'job'.

2007-10-25  Tom Tromey  <tromey@redhat.com>

	* Makefile.in (GTFILES): Added toplev.c.
	* toplev.c (job_arguments): Removed.
	(struct compilation_job): New.
	(job): New global.
	(compile_file): Collect before forking.  Start 'as'.
	(finalize): Call wait_for_as.
	(wait_for_as): New function.
	(copy_to_vec): Likewise.
	(server_callback): Create a compilation_job.  Don't start or wait
	for as.
	Include gt-toplev.h.
	* server.c: Don't include dyn-string.h.
	(free_argv, split_argv): Removed.
	(request_and_response): Use buildargv, freeargv.
	(client_send_command): Use argvtostr.

2007-10-25  Tom Tromey  <tromey@redhat.com>

	* c-parser.c (c_parser) <current_hset>: New field.
	(struct hunk_binding) <key, next>: Remove.
	(struct hunk_set): New.
	(hash_hunk_binding, eq_hunk_binding): Remove.
	(hash_hunk_set, eq_hunk_set): New functions.
	(global_hunk_map): Now contains 'hunk_set's.
	(start_new_parsed_hunk): Remove 'new_signature' argument.  Update.
	(finish_current_hunk): Add 'hset' argument.  Update.
	(create_hunk_binding_map): Update.
	(struct can_reuse_hunk_data): New.
	(check_hunk_binding): New function.
	(can_reuse_hunk): Add 'out_set' argument.  Update.  Use
	check_hunk_binding.
	(c_parser_translation_unit): Update.

2007-10-25  Tom Tromey  <tromey@redhat.com>

	* ggc-common.c (ggc_thread_clean_up): Check for pending GC after
	cleanup.

2007-10-19  Tom Tromey  <tromey@redhat.com>

	* dbxout.c (dbx_debug_hooks): Update.
	* varasm.c (assemble_external): Remove assert.